--- a/diabetes/explainer.ipynb
+++ b/diabetes/explainer.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\xgboost\\core.py:158: UserWarning: [19:49:45] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+            "C:\\Users\\User\\AppData\\Roaming\\Python\\Python312\\site-packages\\xgboost\\core.py:158: UserWarning: [21:11:38] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-08cbc0333d8d4aae1-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
             "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
             "  warnings.warn(smsg, UserWarning)\n",
@@ -22,7 +22,7 @@
           "output_type": "stream",
           "text": [
             "[LightGBM] [Info] Number of positive: 4087, number of negative: 4061\n",
-            "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000871 seconds.\n",
+            "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000974 seconds.\n",
             "You can set `force_col_wise=true` to remove the overhead.\n",
             "[LightGBM] [Info] Total Bins 4164\n",
             "[LightGBM] [Info] Number of data points in the train set: 8148, number of used features: 24\n",
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2760,6 +2760,249 @@
         "        feature_names=all_feature_names\n",
         "    ).plot()\n",
         "    plt.savefig(f'explanations/pdp/{name}_{feature}.png')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✅ All models trained and saved successfully using SMOTE.\n",
+            "Generating enhanced SHAP explanations for lr...\n"
+          ]
+        },
+        {
+          "ename": "TypeError",
+          "evalue": "waterfall() got an unexpected keyword argument 'features'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[7], line 184\u001b[0m\n\u001b[0;32m    182\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, model \u001b[38;5;129;01min\u001b[39;00m models\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m    183\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerating enhanced SHAP explanations for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 184\u001b[0m     \u001b[43mgenerate_shap_explanations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test_explain_processed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mall_feature_names\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    186\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerating enhanced LIME explanations for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    187\u001b[0m     generate_lime_explanations(\n\u001b[0;32m    188\u001b[0m         model\u001b[38;5;241m=\u001b[39mmodel,\n\u001b[0;32m    189\u001b[0m         model_name\u001b[38;5;241m=\u001b[39mname,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    193\u001b[0m         class_names\u001b[38;5;241m=\u001b[39mclass_names\n\u001b[0;32m    194\u001b[0m     )\n",
+            "Cell \u001b[1;32mIn[7], line 62\u001b[0m, in \u001b[0;36mgenerate_shap_explanations\u001b[1;34m(model, model_name, X_test, feature_names)\u001b[0m\n\u001b[0;32m     60\u001b[0m sample_idx \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(X_test))\n\u001b[0;32m     61\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m14\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m---> 62\u001b[0m \u001b[43mshap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaterfall_plot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexplainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexpected_value\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43misinstance\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mexplainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexpected_value\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mexplainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexpected_value\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     63\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mshap_values\u001b[49m\u001b[43m[\u001b[49m\u001b[43msample_idx\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     64\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mfeatures\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mX_test\u001b[49m\u001b[43m[\u001b[49m\u001b[43msample_idx\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m     65\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mfeature_names\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfeature_names\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     66\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mshow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     67\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSHAP Waterfall Plot - \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (Sample \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msample_idx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m, fontsize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m14\u001b[39m)\n\u001b[0;32m     68\u001b[0m plt\u001b[38;5;241m.\u001b[39mtight_layout()\n",
+            "\u001b[1;31mTypeError\u001b[0m: waterfall() got an unexpected keyword argument 'features'"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<Figure size 1400x800 with 0 Axes>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "# ... [Previous code remains unchanged until after model training] ...\n",
+        "\n",
+        "print(\"✅ All models trained and saved successfully using SMOTE.\")\n",
+        "\n",
+        "# Add missing imports for enhanced visualizations\n",
+        "from sklearn.base import BaseEstimator, ClassifierMixin\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.inspection import permutation_importance\n",
+        "\n",
+        "# 14. Prepare data for explanations\n",
+        "# Process entire original dataset for LIME training\n",
+        "X_entire_processed = preprocessor.transform(X)\n",
+        "\n",
+        "# Get feature names after preprocessing\n",
+        "num_features = numerical_features\n",
+        "cat_features = preprocessor.named_transformers_['cat'].get_feature_names_out(categorical_features)\n",
+        "all_feature_names = np.concatenate([num_features, cat_features])\n",
+        "\n",
+        "# 15. Create directory for enhanced explanations\n",
+        "os.makedirs('explanations/shap', exist_ok=True)\n",
+        "os.makedirs('explanations/lime', exist_ok=True)\n",
+        "os.makedirs('explanations/feature_importance', exist_ok=True)\n",
+        "\n",
+        "# 16. Enhanced SHAP Explanations\n",
+        "def generate_shap_explanations(model, model_name, X_test, feature_names):\n",
+        "    \"\"\"Generate enhanced SHAP visualizations\"\"\"\n",
+        "    # Select appropriate explainer\n",
+        "    if isinstance(model, (RandomForestClassifier, XGBClassifier, LGBMClassifier)):\n",
+        "        explainer = shap.TreeExplainer(model)\n",
+        "        shap_values = explainer.shap_values(X_test)\n",
+        "    elif isinstance(model, LogisticRegression):\n",
+        "        explainer = shap.LinearExplainer(model, X_test)\n",
+        "        shap_values = explainer.shap_values(X_test)\n",
+        "    else:\n",
+        "        explainer = shap.KernelExplainer(model.predict, shap.kmeans(X_test, 5))\n",
+        "        shap_values = explainer.shap_values(X_test)\n",
+        "    \n",
+        "    # Handle binary classification output\n",
+        "    if isinstance(shap_values, list) and len(shap_values) == 2:\n",
+        "        shap_values = shap_values[1]  # Use positive class values\n",
+        "    \n",
+        "    # 1. Summary Plot\n",
+        "    plt.figure(figsize=(12, 8))\n",
+        "    shap.summary_plot(shap_values, X_test, feature_names=feature_names, show=False)\n",
+        "    plt.title(f'SHAP Summary - {model_name}', fontsize=14)\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(f'explanations/shap/shap_summary_{model_name}.png', dpi=150, bbox_inches='tight')\n",
+        "    plt.close()\n",
+        "    \n",
+        "    # 2. Bar Plot of Mean Absolute SHAP Values\n",
+        "    plt.figure(figsize=(12, 8))\n",
+        "    shap.summary_plot(shap_values, X_test, feature_names=feature_names, plot_type=\"bar\", show=False)\n",
+        "    plt.title(f'SHAP Feature Importance - {model_name}', fontsize=14)\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(f'explanations/shap/shap_bar_{model_name}.png', dpi=150, bbox_inches='tight')\n",
+        "    plt.close()\n",
+        "    \n",
+        "    # 3. Waterfall Plot for a Representative Sample\n",
+        "    sample_idx = np.random.randint(0, len(X_test))\n",
+        "    plt.figure(figsize=(14, 8))\n",
+        "    shap.waterfall_plot(explainer.expected_value[1] if isinstance(explainer.expected_value, list) else explainer.expected_value, \n",
+        "                        shap_values[sample_idx], \n",
+        "                        features=X_test[sample_idx], \n",
+        "                        feature_names=feature_names,\n",
+        "                        show=False)\n",
+        "    plt.title(f'SHAP Waterfall Plot - {model_name} (Sample {sample_idx})', fontsize=14)\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(f'explanations/shap/shap_waterfall_{model_name}.png', dpi=150, bbox_inches='tight')\n",
+        "    plt.close()\n",
+        "    \n",
+        "    # 4. Decision Plot for Multiple Samples\n",
+        "    sample_indices = np.random.choice(len(X_test), min(5, len(X_test)), replace=False)\n",
+        "    plt.figure(figsize=(14, 10))\n",
+        "    shap.decision_plot(explainer.expected_value[1] if isinstance(explainer.expected_value, list) else explainer.expected_value, \n",
+        "                      shap_values[sample_indices], \n",
+        "                      features=X_test[sample_indices],\n",
+        "                      feature_names=feature_names,\n",
+        "                      show=False)\n",
+        "    plt.title(f'SHAP Decision Plot - {model_name}', fontsize=14)\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(f'explanations/shap/shap_decision_{model_name}.png', dpi=150, bbox_inches='tight')\n",
+        "    plt.close()\n",
+        "\n",
+        "# 17. Enhanced LIME Explanations\n",
+        "class KerasWrapper(BaseEstimator, ClassifierMixin):\n",
+        "    \"\"\"Wrapper for Keras models to use with LIME\"\"\"\n",
+        "    def __init__(self, model):\n",
+        "        self.model = model\n",
+        "        \n",
+        "    def predict_proba(self, X):\n",
+        "        return np.hstack([1 - self.model.predict(X), self.model.predict(X)])\n",
+        "\n",
+        "def generate_lime_explanations(model, model_name, X_train_processed, X_test_processed, feature_names, class_names):\n",
+        "    \"\"\"Generate enhanced LIME explanations\"\"\"\n",
+        "    # Wrap Keras model if needed\n",
+        "    if model_name == 'nn':\n",
+        "        model = KerasWrapper(model)\n",
+        "    \n",
+        "    # Create LIME explainer using entire processed dataset\n",
+        "    explainer = lime_tabular.LimeTabularExplainer(\n",
+        "        training_data=X_train_processed,\n",
+        "        feature_names=feature_names,\n",
+        "        class_names=class_names,\n",
+        "        mode='classification',\n",
+        "        discretize_continuous=False,\n",
+        "        verbose=True\n",
+        "    )\n",
+        "    \n",
+        "    # Generate explanations for representative samples\n",
+        "    sample_indices = np.random.choice(len(X_test_processed), 5, replace=False)\n",
+        "    \n",
+        "    for i, idx in enumerate(sample_indices):\n",
+        "        # Generate explanation\n",
+        "        exp = explainer.explain_instance(\n",
+        "            data_row=X_test_processed[idx],\n",
+        "            predict_fn=model.predict_proba,\n",
+        "            num_features=10,\n",
+        "            top_labels=1\n",
+        "        )\n",
+        "        \n",
+        "        # Save as HTML\n",
+        "        exp.save_to_file(f'explanations/lime/lime_{model_name}_sample_{i+1}.html')\n",
+        "        \n",
+        "        # Save as PNG image\n",
+        "        fig = exp.as_pyplot_figure()\n",
+        "        fig.set_size_inches(12, 8)\n",
+        "        plt.title(f'LIME Explanation - {model_name} (Sample {i+1})', fontsize=14)\n",
+        "        plt.tight_layout()\n",
+        "        plt.savefig(f'explanations/lime/lime_{model_name}_sample_{i+1}.png', dpi=150, bbox_inches='tight')\n",
+        "        plt.close()\n",
+        "\n",
+        "# 18. Permutation Importance\n",
+        "def generate_permutation_importance(model, model_name, X_test, y_test, feature_names):\n",
+        "    \"\"\"Calculate and plot permutation importance\"\"\"\n",
+        "    if model_name == 'nn':\n",
+        "        # Wrap Keras model for sklearn compatibility\n",
+        "        def predict_wrapper(X):\n",
+        "            return model.predict(X, verbose=0).flatten()\n",
+        "    else:\n",
+        "        predict_wrapper = model.predict_proba\n",
+        "    \n",
+        "    # Calculate permutation importance\n",
+        "    result = permutation_importance(\n",
+        "        model, X_test, y_test, n_repeats=10, random_state=42, \n",
+        "        scoring='roc_auc', n_jobs=-1\n",
+        "    )\n",
+        "    \n",
+        "    # Sort features by importance\n",
+        "    sorted_idx = result.importances_mean.argsort()\n",
+        "    \n",
+        "    # Plot\n",
+        "    plt.figure(figsize=(14, 10))\n",
+        "    plt.boxplot(\n",
+        "        result.importances[sorted_idx].T,\n",
+        "        vert=False, \n",
+        "        labels=np.array(feature_names)[sorted_idx]\n",
+        "    )\n",
+        "    plt.title(f'Permutation Importance - {model_name}', fontsize=14)\n",
+        "    plt.xlabel('Decrease in ROC AUC')\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(f'explanations/feature_importance/perm_importance_{model_name}.png', dpi=150, bbox_inches='tight')\n",
+        "    plt.close()\n",
+        "\n",
+        "# 19. Generate all explanations for each model\n",
+        "models = {\n",
+        "    'lr': lr,\n",
+        "    'rf': rf,\n",
+        "    'xgb': xgb,\n",
+        "    'lgb': lgb,\n",
+        "    'nn': nn\n",
+        "}\n",
+        "\n",
+        "class_names = ['non-diabetic', 'diabetic']\n",
+        "\n",
+        "# Create test set for explanations\n",
+        "X_train_explain, X_test_explain, y_train_explain, y_test_explain = train_test_split(\n",
+        "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+        ")\n",
+        "X_test_explain_processed = preprocessor.transform(X_test_explain)\n",
+        "\n",
+        "for name, model in models.items():\n",
+        "    print(f\"Generating enhanced SHAP explanations for {name}...\")\n",
+        "    generate_shap_explanations(model, name, X_test_explain_processed, all_feature_names)\n",
+        "    \n",
+        "    print(f\"Generating enhanced LIME explanations for {name}...\")\n",
+        "    generate_lime_explanations(\n",
+        "        model=model,\n",
+        "        model_name=name,\n",
+        "        X_train_processed=X_entire_processed,\n",
+        "        X_test_processed=X_test_explain_processed,\n",
+        "        feature_names=all_feature_names,\n",
+        "        class_names=class_names\n",
+        "    )\n",
+        "    \n",
+        "    print(f\"Generating permutation importance for {name}...\")\n",
+        "    generate_permutation_importance(\n",
+        "        model, \n",
+        "        name, \n",
+        "        X_test_explain_processed, \n",
+        "        y_test_explain, \n",
+        "        all_feature_names\n",
+        "    )\n",
+        "\n",
+        "print(\"✅ Enhanced SHAP, LIME, and permutation importance explanations generated successfully.\")"
       ]
     }
   ],
